ChangeLog:

nxcomp-3.1.0-4

- Classes ProxyReadBuffer and ServerReadBuffer returned an invalid
  number of characters to read in the case of a readable() failure.

- Connections to proxy versions newer than 3.0.0 were not accepted.

- Reading options from file could fail if options contained spaces
  or other characters interrupting the fscanf()'s matching of input.

- The proxy link could not be flushed if a ping request was replied
  after the end of the read loop.

nxcomp-3.1.0-3

- Fixed a compilation warning on GCC 2.95.
  
nxcomp-3.1.0-2

- Solved TR09E01852. Modified the encoding of the number of rects
  in the XSetClipRectangles request.
  
nxcomp-3.1.0-1

- Opened the 3.0.1 branch based on nxcomp-3.0.0-46.

nxcomp-3.0.0-46

- Fixed TR09E01865 and TR08E01831. Assume the old behavior of compr-
  essing the CUPS, SMB, HTTP and Font channels when connected to an
  old proxy version.

nxcomp-3.0.0-45

- Retry the fork() 30 times, but only on Cygwin (Sob!).

nxcomp-3.0.0-44

- In the case of an error, try again to fork() after a second, for
  a maximum of 5 times. This seems to constitute a valid workaround
  to the intermittent fork() failures observed on Windows.
  
- Fixed NXTransDestroy() to show the 'broken connection' dialog in
  the case of a link failure on the client.

- Handled the 'terminating' and 'terminated' messages as new proxy
  stages.

- Force all the directories and files created by the library to be
  readable only by the user.

- Don't complain if the shared memory segment can't be initialized
  on Windows.

nxcomp-3.0.0-43

- Prevent the reallocation of the read buffer in the proxy and the
  agent transport if the buffer was borrowed by an upper layer.

- Let the house-keeping process remove the cache directories that
  are empty and have not be used since more than 30 days.

- Added the missing destruction of the ZLIB stream used for image
  decompression at proxy shutdown.

nxcomp-3.0.0-42
